REmoved TTL logic. Added json ccd-defs data for temp miam documents. REverted removal of work in progress REtryable code