@@ -8,11 +8,9 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.Resource;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.client.CoreCaseDataApi;
@@ -50,7 +48,6 @@ import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 import uk.gov.hmcts.reform.prl.utils.CommonUtils;
 import uk.gov.hmcts.reform.prl.utils.DocumentUtils;
 
-import java.io.IOException;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
@@ -112,7 +109,6 @@ public class ManageDocumentsService {
     private final LaunchDarklyClient launchDarklyClient;
     private final RoleAssignmentApi roleAssignmentApi;
     private final NotificationService notificationService;
-    private final MiamDocumentRetryService miamDocumentRetryService;
 
     public static final String CONFIDENTIAL = "Confidential_";
 
@@ -533,32 +529,10 @@ public class ManageDocumentsService {
         try {
             String sysUserToken = systemUserService.getSysUserToken();
             String serviceToken = authTokenGenerator.generate();
-
-            ResponseEntity<Resource> resp = miamDocumentRetryService
-                .getMiamDocumentWithRetry(sysUserToken, serviceToken, documentId);
-
-            HttpStatusCode httpStatusCode = resp.getStatusCode();
-
-            if (httpStatusCode == HttpStatus.CONFLICT) {
-                log.warn("409 concurrency after retries for docId: {}; skipping upload.", documentId);
-                return null;
-            }
-
-            if (!httpStatusCode.is2xxSuccessful()) {
-                throw new IllegalStateException("Unexpected status "
-                                                    + httpStatusCode
-                                                    + " when fetching MIAM document with id=" + documentId);
-            }
-
-            Resource resource = java.util.Objects.requireNonNull(
-                resp.getBody(), "Empty response body for docId: " + documentId);
-
-            try (var in = resource.getInputStream()) {
-                docData = in.readAllBytes();
-            } catch (IOException ex) {
-                throw new IllegalStateException("Failed to fetch MIAM document with id: " + documentId, ex);
-            }
-
+            Resource resource = caseDocumentClient.getDocumentBinary(sysUserToken, serviceToken,
+                                                                     documentId
+            ).getBody();
+            docData = IOUtils.toByteArray(resource.getInputStream());
             UploadResponse uploadResponse = caseDocumentClient.uploadDocuments(
                 sysUserToken,
                 serviceToken,
